JavaletteParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.5 from .\JavaletteParser.y
-----------------------------------------------------------------------------

state 58 contains 1 shift/reduce conflicts.
state 125 contains 1 shift/reduce conflicts.

terminal "String" is unused
terminal "false" is unused
terminal "true" is unused
terminal "printInt" is unused
terminal "printDouble" is unused
terminal "printString" is unused
terminal "error" is unused
terminal "readInt" is unused
terminal "readDouble" is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_javaletteParse -> Program                   (0)
	Program -> FunctionList                            (1)
	FunctionList -> Function FunctionList              (2)
	FunctionList ->                                    (3)
	Function -> Type Ident "(" FunctionArgs ")" StmtComp   (4)
	FunctionArgs -> FunctionArg                        (5)
	FunctionArgs -> FunctionArg "," FunctionArgs       (6)
	FunctionArgs ->                                    (7)
	FunctionArg -> Type Ident                          (8)
	Stmt -> StmtComp                                   (9)
	Stmt -> StmtDecl                                   (10)
	Stmt -> StmtAssig                                  (11)
	Stmt -> StmtIf                                     (12)
	Stmt -> StmtWhile                                  (13)
	Stmt -> StmtFor                                    (14)
	Stmt -> StmtReturn                                 (15)
	Stmt -> StmtExp                                    (16)
	StmtComp -> "{" StmtList "}"                       (17)
	StmtList -> Stmt StmtList                          (18)
	StmtList ->                                        (19)
	StmtDecl -> Type DeclList ";"                      (20)
	DeclList -> Decl                                   (21)
	DeclList -> Decl "," DeclList                      (22)
	Decl -> Ident                                      (23)
	Decl -> Ident "=" Exp                              (24)
	StmtAssig -> Assig ";"                             (25)
	Assig -> Ident "=" Exp                             (26)
	Assig -> Ident "++"                                (27)
	Assig -> Ident "--"                                (28)
	StmtIf -> "if" "(" Exp ")" Stmt                    (29)
	StmtIf -> "if" "(" Exp ")" Stmt "else" Stmt        (30)
	StmtWhile -> "while" "(" Exp ")" Stmt              (31)
	StmtFor -> "for" "(" Assig ";" Exp ";" Assig ")" Stmt   (32)
	StmtReturn -> "return" ";"                         (33)
	StmtReturn -> "return" Exp ";"                     (34)
	StmtExp -> Exp ";"                                 (35)
	Type -> "int"                                      (36)
	Type -> "double"                                   (37)
	Type -> "boolean"                                  (38)
	Type -> "void"                                     (39)
	Exp -> ExpOr                                       (40)
	ExpOr -> ExpAnd                                    (41)
	ExpOr -> ExpOr "||" ExpAnd                         (42)
	ExpAnd -> ExpComp                                  (43)
	ExpAnd -> ExpAnd "&&" ExpComp                      (44)
	ExpComp -> ExpRel                                  (45)
	ExpComp -> ExpComp "==" ExpRel                     (46)
	ExpComp -> ExpComp "!=" ExpRel                     (47)
	ExpRel -> ExpAddi                                  (48)
	ExpRel -> ExpRel "<" ExpAddi                       (49)
	ExpRel -> ExpRel ">" ExpAddi                       (50)
	ExpRel -> ExpRel "<=" ExpAddi                      (51)
	ExpRel -> ExpRel ">=" ExpAddi                      (52)
	ExpAddi -> ExpMulti                                (53)
	ExpAddi -> ExpAddi "+" ExpMulti                    (54)
	ExpAddi -> ExpAddi "-" ExpMulti                    (55)
	ExpMulti -> ExpOneArg                              (56)
	ExpMulti -> ExpMulti "*" ExpOneArg                 (57)
	ExpMulti -> ExpMulti "/" ExpOneArg                 (58)
	ExpMulti -> ExpMulti "%" ExpOneArg                 (59)
	ExpOneArg -> ExpPostfix                            (60)
	ExpOneArg -> "!" ExpOneArg                         (61)
	ExpOneArg -> "+" ExpOneArg                         (62)
	ExpOneArg -> "-" ExpOneArg                         (63)
	ExpPostfix -> ExpSimp                              (64)
	ExpPostfix -> ExpCallFunc                          (65)
	ExpCallFunc -> Ident "(" ")"                       (66)
	ExpCallFunc -> Ident "(" ExpList ")"               (67)
	ExpList -> Exp "," ExpList                         (68)
	ExpList ->                                         (69)
	ExpSimp -> Ident                                   (70)
	ExpSimp -> Literal                                 (71)
	ExpSimp -> "(" Exp ")"                             (72)
	Literal -> IntLiteral                              (73)
	Literal -> DoubleLiteral                           (74)
	Literal -> StringLiteral                           (75)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"int"          { TInt }
	"double"       { TDouble }
	"boolean"      { TBoolean }
	"String"       { TString }
	"void"         { TVoid }
	"false"        { TFalseLiteral }
	"true"         { TTrueLiteral }
	IntLiteral     { TIntLiteral $$ }
	DoubleLiteral  { TDoubleLiteral $$ }
	StringLiteral  { TStringLiteral $$ }
	"("            { TLeftParen }
	")"            { TRightParen }
	"{"            { TLeftBrace }
	"}"            { TRightBrace }
	","            { TComma }
	";"            { TSemicolon }
	"="            { TAssignSign }
	"++"           { TIncrement }
	"--"           { TDecrement }
	"||"           { TOr }
	"&&"           { TAnd }
	"=="           { TEqualsSign }
	"!="           { TNotEqualsSign }
	"<"            { TLessSign }
	">"            { TGreaterSign }
	"<="           { TLeOrEqSign }
	">="           { TGrOrEqSign }
	"+"            { TPlusSign }
	"-"            { TMinusSign }
	"/"            { TDivSign }
	"%"            { TModSign }
	"*"            { TMultiSign }
	"!"            { TNot }
	"if"           { TIf }
	"else"         { TElse }
	"while"        { TWhile }
	"for"          { TFor }
	"return"       { TReturn }
	"printInt"     { TPredefFunPrintInt }
	"printDouble"  { TPredefFunPrintDouble }
	"printString"  { TPredefFunPrintString }
	"error"        { TPredefFunError }
	"readInt"      { TPredefFunReadInt }
	"readDouble"   { TPredefFunReadDouble }
	Ident          { TIdent $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_javaletteParse rule  0
	Program         rule  1
	FunctionList    rules 2, 3
	Function        rule  4
	FunctionArgs    rules 5, 6, 7
	FunctionArg     rule  8
	Stmt            rules 9, 10, 11, 12, 13, 14, 15, 16
	StmtComp        rule  17
	StmtList        rules 18, 19
	StmtDecl        rule  20
	DeclList        rules 21, 22
	Decl            rules 23, 24
	StmtAssig       rule  25
	Assig           rules 26, 27, 28
	StmtIf          rules 29, 30
	StmtWhile       rule  31
	StmtFor         rule  32
	StmtReturn      rules 33, 34
	StmtExp         rule  35
	Type            rules 36, 37, 38, 39
	Exp             rule  40
	ExpOr           rules 41, 42
	ExpAnd          rules 43, 44
	ExpComp         rules 45, 46, 47
	ExpRel          rules 48, 49, 50, 51, 52
	ExpAddi         rules 53, 54, 55
	ExpMulti        rules 56, 57, 58, 59
	ExpOneArg       rules 60, 61, 62, 63
	ExpPostfix      rules 64, 65
	ExpCallFunc     rules 66, 67
	ExpList         rules 68, 69
	ExpSimp         rules 70, 71, 72
	Literal         rules 73, 74, 75

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	"int"          shift, and enter state 5
	"double"       shift, and enter state 6
	"boolean"      shift, and enter state 7
	"void"         shift, and enter state 8
	%eof           reduce using rule 3

	Program        goto state 9
	FunctionList   goto state 2
	Function       goto state 3
	Type           goto state 4

State 1


	"int"          shift, and enter state 5
	"double"       shift, and enter state 6
	"boolean"      shift, and enter state 7
	"void"         shift, and enter state 8

	FunctionList   goto state 2
	Function       goto state 3
	Type           goto state 4

State 2

	Program -> FunctionList .                           (rule 1)

	%eof           reduce using rule 1


State 3

	FunctionList -> Function . FunctionList             (rule 2)

	"int"          shift, and enter state 5
	"double"       shift, and enter state 6
	"boolean"      shift, and enter state 7
	"void"         shift, and enter state 8
	%eof           reduce using rule 3

	FunctionList   goto state 11
	Function       goto state 3
	Type           goto state 4

State 4

	Function -> Type . Ident "(" FunctionArgs ")" StmtComp    (rule 4)

	Ident          shift, and enter state 10


State 5

	Type -> "int" .                                     (rule 36)

	Ident          reduce using rule 36


State 6

	Type -> "double" .                                  (rule 37)

	Ident          reduce using rule 37


State 7

	Type -> "boolean" .                                 (rule 38)

	Ident          reduce using rule 38


State 8

	Type -> "void" .                                    (rule 39)

	Ident          reduce using rule 39


State 9

	%start_javaletteParse -> Program .                  (rule 0)

	%eof           accept


State 10

	Function -> Type Ident . "(" FunctionArgs ")" StmtComp    (rule 4)

	"("            shift, and enter state 12


State 11

	FunctionList -> Function FunctionList .             (rule 2)

	%eof           reduce using rule 2


State 12

	Function -> Type Ident "(" . FunctionArgs ")" StmtComp    (rule 4)

	"int"          shift, and enter state 5
	"double"       shift, and enter state 6
	"boolean"      shift, and enter state 7
	"void"         shift, and enter state 8
	")"            reduce using rule 7

	FunctionArgs   goto state 13
	FunctionArg    goto state 14
	Type           goto state 15

State 13

	Function -> Type Ident "(" FunctionArgs . ")" StmtComp    (rule 4)

	")"            shift, and enter state 18


State 14

	FunctionArgs -> FunctionArg .                       (rule 5)
	FunctionArgs -> FunctionArg . "," FunctionArgs      (rule 6)

	")"            reduce using rule 5
	","            shift, and enter state 17


State 15

	FunctionArg -> Type . Ident                         (rule 8)

	Ident          shift, and enter state 16


State 16

	FunctionArg -> Type Ident .                         (rule 8)

	")"            reduce using rule 8
	","            reduce using rule 8


State 17

	FunctionArgs -> FunctionArg "," . FunctionArgs      (rule 6)

	"int"          shift, and enter state 5
	"double"       shift, and enter state 6
	"boolean"      shift, and enter state 7
	"void"         shift, and enter state 8
	")"            reduce using rule 7

	FunctionArgs   goto state 21
	FunctionArg    goto state 14
	Type           goto state 15

State 18

	Function -> Type Ident "(" FunctionArgs ")" . StmtComp    (rule 4)

	"{"            shift, and enter state 20

	StmtComp       goto state 19

State 19

	Function -> Type Ident "(" FunctionArgs ")" StmtComp .    (rule 4)

	"int"          reduce using rule 4
	"double"       reduce using rule 4
	"boolean"      reduce using rule 4
	"void"         reduce using rule 4
	%eof           reduce using rule 4


State 20

	StmtComp -> "{" . StmtList "}"                      (rule 17)

	"int"          shift, and enter state 5
	"double"       shift, and enter state 6
	"boolean"      shift, and enter state 7
	"void"         shift, and enter state 8
	IntLiteral     shift, and enter state 46
	DoubleLiteral  shift, and enter state 47
	StringLiteral  shift, and enter state 48
	"("            shift, and enter state 49
	"{"            shift, and enter state 20
	"}"            reduce using rule 19
	"+"            shift, and enter state 50
	"-"            shift, and enter state 51
	"!"            shift, and enter state 52
	"if"           shift, and enter state 53
	"while"        shift, and enter state 54
	"for"          shift, and enter state 55
	"return"       shift, and enter state 56
	Ident          shift, and enter state 57

	Stmt           goto state 22
	StmtComp       goto state 23
	StmtList       goto state 24
	StmtDecl       goto state 25
	StmtAssig      goto state 26
	Assig          goto state 27
	StmtIf         goto state 28
	StmtWhile      goto state 29
	StmtFor        goto state 30
	StmtReturn     goto state 31
	StmtExp        goto state 32
	Type           goto state 33
	Exp            goto state 34
	ExpOr          goto state 35
	ExpAnd         goto state 36
	ExpComp        goto state 37
	ExpRel         goto state 38
	ExpAddi        goto state 39
	ExpMulti       goto state 40
	ExpOneArg      goto state 41
	ExpPostfix     goto state 42
	ExpCallFunc    goto state 43
	ExpSimp        goto state 44
	Literal        goto state 45

State 21

	FunctionArgs -> FunctionArg "," FunctionArgs .      (rule 6)

	")"            reduce using rule 6


State 22

	StmtList -> Stmt . StmtList                         (rule 18)

	"int"          shift, and enter state 5
	"double"       shift, and enter state 6
	"boolean"      shift, and enter state 7
	"void"         shift, and enter state 8
	IntLiteral     shift, and enter state 46
	DoubleLiteral  shift, and enter state 47
	StringLiteral  shift, and enter state 48
	"("            shift, and enter state 49
	"{"            shift, and enter state 20
	"}"            reduce using rule 19
	"+"            shift, and enter state 50
	"-"            shift, and enter state 51
	"!"            shift, and enter state 52
	"if"           shift, and enter state 53
	"while"        shift, and enter state 54
	"for"          shift, and enter state 55
	"return"       shift, and enter state 56
	Ident          shift, and enter state 57

	Stmt           goto state 22
	StmtComp       goto state 23
	StmtList       goto state 91
	StmtDecl       goto state 25
	StmtAssig      goto state 26
	Assig          goto state 27
	StmtIf         goto state 28
	StmtWhile      goto state 29
	StmtFor        goto state 30
	StmtReturn     goto state 31
	StmtExp        goto state 32
	Type           goto state 33
	Exp            goto state 34
	ExpOr          goto state 35
	ExpAnd         goto state 36
	ExpComp        goto state 37
	ExpRel         goto state 38
	ExpAddi        goto state 39
	ExpMulti       goto state 40
	ExpOneArg      goto state 41
	ExpPostfix     goto state 42
	ExpCallFunc    goto state 43
	ExpSimp        goto state 44
	Literal        goto state 45

State 23

	Stmt -> StmtComp .                                  (rule 9)

	"int"          reduce using rule 9
	"double"       reduce using rule 9
	"boolean"      reduce using rule 9
	"void"         reduce using rule 9
	IntLiteral     reduce using rule 9
	DoubleLiteral  reduce using rule 9
	StringLiteral  reduce using rule 9
	"("            reduce using rule 9
	"{"            reduce using rule 9
	"}"            reduce using rule 9
	"+"            reduce using rule 9
	"-"            reduce using rule 9
	"!"            reduce using rule 9
	"if"           reduce using rule 9
	"else"         reduce using rule 9
	"while"        reduce using rule 9
	"for"          reduce using rule 9
	"return"       reduce using rule 9
	Ident          reduce using rule 9


State 24

	StmtComp -> "{" StmtList . "}"                      (rule 17)

	"}"            shift, and enter state 90


State 25

	Stmt -> StmtDecl .                                  (rule 10)

	"int"          reduce using rule 10
	"double"       reduce using rule 10
	"boolean"      reduce using rule 10
	"void"         reduce using rule 10
	IntLiteral     reduce using rule 10
	DoubleLiteral  reduce using rule 10
	StringLiteral  reduce using rule 10
	"("            reduce using rule 10
	"{"            reduce using rule 10
	"}"            reduce using rule 10
	"+"            reduce using rule 10
	"-"            reduce using rule 10
	"!"            reduce using rule 10
	"if"           reduce using rule 10
	"else"         reduce using rule 10
	"while"        reduce using rule 10
	"for"          reduce using rule 10
	"return"       reduce using rule 10
	Ident          reduce using rule 10


State 26

	Stmt -> StmtAssig .                                 (rule 11)

	"int"          reduce using rule 11
	"double"       reduce using rule 11
	"boolean"      reduce using rule 11
	"void"         reduce using rule 11
	IntLiteral     reduce using rule 11
	DoubleLiteral  reduce using rule 11
	StringLiteral  reduce using rule 11
	"("            reduce using rule 11
	"{"            reduce using rule 11
	"}"            reduce using rule 11
	"+"            reduce using rule 11
	"-"            reduce using rule 11
	"!"            reduce using rule 11
	"if"           reduce using rule 11
	"else"         reduce using rule 11
	"while"        reduce using rule 11
	"for"          reduce using rule 11
	"return"       reduce using rule 11
	Ident          reduce using rule 11


State 27

	StmtAssig -> Assig . ";"                            (rule 25)

	";"            shift, and enter state 89


State 28

	Stmt -> StmtIf .                                    (rule 12)

	"int"          reduce using rule 12
	"double"       reduce using rule 12
	"boolean"      reduce using rule 12
	"void"         reduce using rule 12
	IntLiteral     reduce using rule 12
	DoubleLiteral  reduce using rule 12
	StringLiteral  reduce using rule 12
	"("            reduce using rule 12
	"{"            reduce using rule 12
	"}"            reduce using rule 12
	"+"            reduce using rule 12
	"-"            reduce using rule 12
	"!"            reduce using rule 12
	"if"           reduce using rule 12
	"else"         reduce using rule 12
	"while"        reduce using rule 12
	"for"          reduce using rule 12
	"return"       reduce using rule 12
	Ident          reduce using rule 12


State 29

	Stmt -> StmtWhile .                                 (rule 13)

	"int"          reduce using rule 13
	"double"       reduce using rule 13
	"boolean"      reduce using rule 13
	"void"         reduce using rule 13
	IntLiteral     reduce using rule 13
	DoubleLiteral  reduce using rule 13
	StringLiteral  reduce using rule 13
	"("            reduce using rule 13
	"{"            reduce using rule 13
	"}"            reduce using rule 13
	"+"            reduce using rule 13
	"-"            reduce using rule 13
	"!"            reduce using rule 13
	"if"           reduce using rule 13
	"else"         reduce using rule 13
	"while"        reduce using rule 13
	"for"          reduce using rule 13
	"return"       reduce using rule 13
	Ident          reduce using rule 13


State 30

	Stmt -> StmtFor .                                   (rule 14)

	"int"          reduce using rule 14
	"double"       reduce using rule 14
	"boolean"      reduce using rule 14
	"void"         reduce using rule 14
	IntLiteral     reduce using rule 14
	DoubleLiteral  reduce using rule 14
	StringLiteral  reduce using rule 14
	"("            reduce using rule 14
	"{"            reduce using rule 14
	"}"            reduce using rule 14
	"+"            reduce using rule 14
	"-"            reduce using rule 14
	"!"            reduce using rule 14
	"if"           reduce using rule 14
	"else"         reduce using rule 14
	"while"        reduce using rule 14
	"for"          reduce using rule 14
	"return"       reduce using rule 14
	Ident          reduce using rule 14


State 31

	Stmt -> StmtReturn .                                (rule 15)

	"int"          reduce using rule 15
	"double"       reduce using rule 15
	"boolean"      reduce using rule 15
	"void"         reduce using rule 15
	IntLiteral     reduce using rule 15
	DoubleLiteral  reduce using rule 15
	StringLiteral  reduce using rule 15
	"("            reduce using rule 15
	"{"            reduce using rule 15
	"}"            reduce using rule 15
	"+"            reduce using rule 15
	"-"            reduce using rule 15
	"!"            reduce using rule 15
	"if"           reduce using rule 15
	"else"         reduce using rule 15
	"while"        reduce using rule 15
	"for"          reduce using rule 15
	"return"       reduce using rule 15
	Ident          reduce using rule 15


State 32

	Stmt -> StmtExp .                                   (rule 16)

	"int"          reduce using rule 16
	"double"       reduce using rule 16
	"boolean"      reduce using rule 16
	"void"         reduce using rule 16
	IntLiteral     reduce using rule 16
	DoubleLiteral  reduce using rule 16
	StringLiteral  reduce using rule 16
	"("            reduce using rule 16
	"{"            reduce using rule 16
	"}"            reduce using rule 16
	"+"            reduce using rule 16
	"-"            reduce using rule 16
	"!"            reduce using rule 16
	"if"           reduce using rule 16
	"else"         reduce using rule 16
	"while"        reduce using rule 16
	"for"          reduce using rule 16
	"return"       reduce using rule 16
	Ident          reduce using rule 16


State 33

	StmtDecl -> Type . DeclList ";"                     (rule 20)

	Ident          shift, and enter state 88

	DeclList       goto state 86
	Decl           goto state 87

State 34

	StmtExp -> Exp . ";"                                (rule 35)

	";"            shift, and enter state 85


State 35

	Exp -> ExpOr .                                      (rule 40)
	ExpOr -> ExpOr . "||" ExpAnd                        (rule 42)

	")"            reduce using rule 40
	","            reduce using rule 40
	";"            reduce using rule 40
	"||"           shift, and enter state 84


State 36

	ExpOr -> ExpAnd .                                   (rule 41)
	ExpAnd -> ExpAnd . "&&" ExpComp                     (rule 44)

	")"            reduce using rule 41
	","            reduce using rule 41
	";"            reduce using rule 41
	"||"           reduce using rule 41
	"&&"           shift, and enter state 83


State 37

	ExpAnd -> ExpComp .                                 (rule 43)
	ExpComp -> ExpComp . "==" ExpRel                    (rule 46)
	ExpComp -> ExpComp . "!=" ExpRel                    (rule 47)

	")"            reduce using rule 43
	","            reduce using rule 43
	";"            reduce using rule 43
	"||"           reduce using rule 43
	"&&"           reduce using rule 43
	"=="           shift, and enter state 81
	"!="           shift, and enter state 82


State 38

	ExpComp -> ExpRel .                                 (rule 45)
	ExpRel -> ExpRel . "<" ExpAddi                      (rule 49)
	ExpRel -> ExpRel . ">" ExpAddi                      (rule 50)
	ExpRel -> ExpRel . "<=" ExpAddi                     (rule 51)
	ExpRel -> ExpRel . ">=" ExpAddi                     (rule 52)

	")"            reduce using rule 45
	","            reduce using rule 45
	";"            reduce using rule 45
	"||"           reduce using rule 45
	"&&"           reduce using rule 45
	"=="           reduce using rule 45
	"!="           reduce using rule 45
	"<"            shift, and enter state 77
	">"            shift, and enter state 78
	"<="           shift, and enter state 79
	">="           shift, and enter state 80


State 39

	ExpRel -> ExpAddi .                                 (rule 48)
	ExpAddi -> ExpAddi . "+" ExpMulti                   (rule 54)
	ExpAddi -> ExpAddi . "-" ExpMulti                   (rule 55)

	")"            reduce using rule 48
	","            reduce using rule 48
	";"            reduce using rule 48
	"||"           reduce using rule 48
	"&&"           reduce using rule 48
	"=="           reduce using rule 48
	"!="           reduce using rule 48
	"<"            reduce using rule 48
	">"            reduce using rule 48
	"<="           reduce using rule 48
	">="           reduce using rule 48
	"+"            shift, and enter state 75
	"-"            shift, and enter state 76


State 40

	ExpAddi -> ExpMulti .                               (rule 53)
	ExpMulti -> ExpMulti . "*" ExpOneArg                (rule 57)
	ExpMulti -> ExpMulti . "/" ExpOneArg                (rule 58)
	ExpMulti -> ExpMulti . "%" ExpOneArg                (rule 59)

	")"            reduce using rule 53
	","            reduce using rule 53
	";"            reduce using rule 53
	"||"           reduce using rule 53
	"&&"           reduce using rule 53
	"=="           reduce using rule 53
	"!="           reduce using rule 53
	"<"            reduce using rule 53
	">"            reduce using rule 53
	"<="           reduce using rule 53
	">="           reduce using rule 53
	"+"            reduce using rule 53
	"-"            reduce using rule 53
	"/"            shift, and enter state 72
	"%"            shift, and enter state 73
	"*"            shift, and enter state 74


State 41

	ExpMulti -> ExpOneArg .                             (rule 56)

	")"            reduce using rule 56
	","            reduce using rule 56
	";"            reduce using rule 56
	"||"           reduce using rule 56
	"&&"           reduce using rule 56
	"=="           reduce using rule 56
	"!="           reduce using rule 56
	"<"            reduce using rule 56
	">"            reduce using rule 56
	"<="           reduce using rule 56
	">="           reduce using rule 56
	"+"            reduce using rule 56
	"-"            reduce using rule 56
	"/"            reduce using rule 56
	"%"            reduce using rule 56
	"*"            reduce using rule 56


State 42

	ExpOneArg -> ExpPostfix .                           (rule 60)

	")"            reduce using rule 60
	","            reduce using rule 60
	";"            reduce using rule 60
	"||"           reduce using rule 60
	"&&"           reduce using rule 60
	"=="           reduce using rule 60
	"!="           reduce using rule 60
	"<"            reduce using rule 60
	">"            reduce using rule 60
	"<="           reduce using rule 60
	">="           reduce using rule 60
	"+"            reduce using rule 60
	"-"            reduce using rule 60
	"/"            reduce using rule 60
	"%"            reduce using rule 60
	"*"            reduce using rule 60


State 43

	ExpPostfix -> ExpCallFunc .                         (rule 65)

	")"            reduce using rule 65
	","            reduce using rule 65
	";"            reduce using rule 65
	"||"           reduce using rule 65
	"&&"           reduce using rule 65
	"=="           reduce using rule 65
	"!="           reduce using rule 65
	"<"            reduce using rule 65
	">"            reduce using rule 65
	"<="           reduce using rule 65
	">="           reduce using rule 65
	"+"            reduce using rule 65
	"-"            reduce using rule 65
	"/"            reduce using rule 65
	"%"            reduce using rule 65
	"*"            reduce using rule 65


State 44

	ExpPostfix -> ExpSimp .                             (rule 64)

	")"            reduce using rule 64
	","            reduce using rule 64
	";"            reduce using rule 64
	"||"           reduce using rule 64
	"&&"           reduce using rule 64
	"=="           reduce using rule 64
	"!="           reduce using rule 64
	"<"            reduce using rule 64
	">"            reduce using rule 64
	"<="           reduce using rule 64
	">="           reduce using rule 64
	"+"            reduce using rule 64
	"-"            reduce using rule 64
	"/"            reduce using rule 64
	"%"            reduce using rule 64
	"*"            reduce using rule 64


State 45

	ExpSimp -> Literal .                                (rule 71)
